--- a/.gitmodules
+++ b/.gitmodules
@@ -15,7 +15,7 @@
 	url = https://github.com/lsalzman/enet
 [submodule "tuns/websocket"]
 	path = tuns/websocket
-	url = https://github.com/payden/libwsclient.git
+	url = https://github.com/SYANiDE-/libwsclient.git
 [submodule "utils/client/bin/interactive-python-websocket-server"]
 	path = utils/client/bin/interactive-python-websocket-server
 	url = https://github.com/TitouanLazard/interactive-python-websocket-server.git
